# spatial-engine

./: .dockerignore  .gcloudignore  .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  README.md  cloudbuild.yaml  main.py  pyproject.toml
backend/: main.py  pdf_generator.py  report_generator.py
data/: smart_home_standards.md
frontend/: index.html  package-lock.json  package.json  script.js  styles.css
frontend/src/: App.tsx  index.css
frontend/src/components/: ConfigGenerator.tsx  Dashboard.tsx  EconomicEngine.tsx  LiveAudioSession.tsx  LiveConsole.tsx  MarketHub.tsx  PhysicsEngine.tsx  Sidebar.tsx  TranscriptionList.tsx  VisionAudit.tsx  Visualizer.tsx
frontend/src/types/: live.ts
my_agent/: agent.py  market_agent.py  physics_engine.py  spatial_state.py
scripts/: create_pdf.py  generate_data.py  get_video.py
src/: combo_tool.py  main.py  media_resolution.py  plot_colors.py  search_tool.py
tests/: test_manual_report.py  test_pdf_export.py  test_physics.py  test_visual_debug.py
